test_scripts/errors/fn_bad_default_value.shm
fn test(a=undefined_var) { a; }
test();
