test_scripts/errors/fn_bad_default_value.stderr
 1 | fn test(a=undefined_var) { a; }
               ^^^^^^^^^^^^^
 2 | test();
Error: Unknown identifier "undefined_var"
